--- a/templates/home/brands.html
+++ b/templates/home/brands.html
@@ -13,82 +13,113 @@
   
   <div class='container'>
     
-    <div class="row mx-auto"  style="float: center;">
-      <div class="col-sm-2 zoom"> 
+    <div class="brandimgs row mx-auto"  style="float: center;">
+      <div class="col-sm-2 zoom  col d-flex align-items-center justify-content-center"> 
         <a onclick="getbrand('nankang');" href="#nankang">
-        <img src="{% static 'images/banners/NANKANG.jpg'  %}" onclick=""  alt="..." class="img-thumbnail  rounded mx-auto d-block">
+          <img src="{% static 'images/banners/NANKANG.jpg'  %}" onclick=""  alt="..." class="img-fluid  rounded mx-auto d-block">
         </a>
       </div>
-      <div class="col-sm-2 zoom"> 
+      <div class="col-sm-2 zoom col d-flex align-items-center justify-content-center"> 
         <a onclick="getbrand('aplus');" href="#aplus">
-        <img src="{% static 'images/banners/APLUS.jpg'  %}" alt="..." class="img-thumbnail  rounded mx-auto d-block">
-      </a>
+          <img src="{% static 'images/banners/APLUS.jpg'  %}" alt="..." class="img-fluid  rounded mx-auto d-block">
+        </a>
       </div>
-      <div class="col-sm-2 zoom"> 
+      <div class="col-sm-2 zoom col d-flex align-items-center justify-content-center"> 
         <a onclick="getbrand('sonar');" href="#sonar">
-        <img src="{% static 'images/banners/SONAR.jpg'  %}" alt="..." class="img-thumbnail  rounded mx-auto d-block">
-      </a>
-    </div>
-      
-    </div>
-    <div class="row mx-auto">
-      <div class="col-sm-2 zoom"> 
-        <a onclick="getbrand('kenda');" href="#kenda">
-        <img src="{% static 'images/banners/KENDA.jpg'  %}"  alt="..." class="img-thumbnail rounded mx-auto d-block">
-      </a>
+          <img src="{% static 'images/banners/SONAR.jpg'  %}" alt="..." class="img-fluid  rounded mx-auto d-block">
+        </a>
       </div>
-      <div class="col-sm-2 zoom"> 
-        <a onclick="getbrand('westlake');" href="#westlake">
-        <img src="{% static 'images/banners/WEST.jpg'  %}"  alt="..." class="img-thumbnail rounded mx-auto d-block">
-      </a>
-    </div>
-      <div class="col-sm-2 zoom"> 
-        <a onclick="getbrand('cooper');" href="#cooper">
-        <img src="{% static 'images/banners/COOPER.jpg'  %}"   alt="..." class="img-thumbnail rounded mx-auto d-block">
-      </a>
-     </div>
       
-      <div class="row mx-auto">
-        <div class="col-sm-2 zoom"> 
-          <a onclick="getbrand('jk');" href="#jk">
-          <img src="{% static 'images/banners/JK.jpg'  %}" alt="..." class="img-thumbnail rounded mx-auto d-block">
+    </div>
+    <div class="brandimgs row mx-auto">
+      <div class="col-sm-2 zoom col d-flex align-items-center justify-content-center"> 
+        <a onclick="getbrand('kenda');" href="#kenda">
+          <img src="{% static 'images/banners/KENDA.jpg'  %}"  alt="..." class="img-fluid rounded mx-auto d-block">
         </a>
-       </div>
-        <div class="col-sm-2 zoom"> 
-          <a onclick="getbrand('ceat');" href="#ceat">
-          <img src="{% static 'images/banners/CEAT.jpg'  %}" alt="..." class="img-thumbnail rounded mx-auto d-block">
+      </div>
+      <div class="col-sm-2 zoom col d-flex align-items-center justify-content-center"> 
+        <a onclick="getbrand('westlake');" href="#westlake">
+          <img src="{% static 'images/banners/WEST.jpg'  %}"  alt="..." class="img-fluid rounded mx-auto d-block">
         </a>
-       </div>
+      </div>
+      <div class="col-sm-2 zoom col d-flex align-items-center justify-content-center"> 
+        <a onclick="getbrand('cooper');" href="#cooper">
+          <img src="{% static 'images/banners/COOPER.jpg'  %}"   alt="..." class="img-fluid rounded mx-auto d-block">
+        </a>
+      </div>
+    </div>
+    
+    <div class="brandimgs row mx-auto">
+      <div class="col-sm-2 zoom col d-flex align-items-center justify-content-center"> 
+        <a onclick="getbrand('jk');" href="#jk">
+          <img src="{% static 'images/banners/JK.jpg'  %}" alt="..." class="img-fluid rounded mx-auto d-block">
+        </a>
+      </div>
+      <div class="col-sm-2 zoom col d-flex align-items-center justify-content-center"> 
+        <a onclick="getbrand('ceat');" href="#ceat">
+          <img src="{% static 'images/banners/CEAT.jpg'  %}" alt="..." class="img-fluid rounded mx-auto d-block">
+        </a>
+      </div>
+      
+    </div>
+    
+    
+    <hr>
+    
+    
+    
+    <div class="brandhis" id="nankang">
+      
+      <div class="row mt-5 story_bg story_dark">
+        <div class="col-sm-6">
+          <h4 class="double_line_title">About NANKANG </h4>
+          <h6 class="single_line_title ml-4">Over 55 Years of Industrious Work, all Dedicated to Motoring Safety </h6>
+          Nankang is proud of our quality products produced over the years. Yet we never cease to pursue excellence in both our R&D and manufacturing processes.
+          Nankang Rubber Tire's heritage runs deep ; having the longest history among the tire manufacturers in Taiwan. For over 55 years, guided by our corporate motto, "Integrity, Pragmatism, and Innovation", we have persisted in creating performance and growth. In response to increasingly discerning market demands, we have striving aggressively towards our goals of "product innovation with R&D, differentiation from competition, product quality upgrading, customer satisfaction, after-sale service and professional management", in order to offer more and more innovative products.
+        </div>
+        
+        <div class="col-sm-6">
+          <img  class="img-fluid rounded mx-auto d-block" src="https://www.nankang-tyre.com/images/brand_story/resize/1630899245703.jpg">
+        </div>
+        
         
       </div>
       
+      <div class="row mt-5 story_bg story_light">
+        <div class="col-sm-6">
+         <h4 class="double_line_title"> Brand Story</h4> 
+          Nankang Rubber Tire's corporate logo has been in use for more than 55 years. Facing increasingly fierce competition from the global tire industry and considering the trend of corporate reforms, in 2010 Nankang embarked upon a review of its corporate identity system “CIS”. Through this new project, we aim to build a new Nankang Tire brand image, of world standard. Being able to keep up with the times, the company will proudly move on to the next splendid century of its corporate history.
+        </div>
+        
+        <div class="col-sm-6">
+          <img  class="img-fluid rounded mx-auto d-block" src="https://www.nankang-tyre.com/images/brand_story/resize/1622519606863.jpg">
+        </div>
+        
+        
+      </div>
+      
+<p>More on :<a target="_blank" href="https://www.nankang-tyre.com/en">Nankang-tyre.com</a>
+
     </div>
+    
+    <div class="brandhis" id="aplus">
+      APLU
+    </div>
+    
+    <div class="brandhis" id="sonar">
+      SONAR
+    </div>
+    
+    <div class="brandhis" id="kenda">
+      KEN
+    </div>
+    
+    
   </div>
-  
-
-
-  <div class="brandhis" id="nankang">
-    NAN
-  </div>
-  
-  <div class="brandhis" id="aplus">
-    APLU
-  </div>
-  
-  <div class="brandhis" id="sonar">
-    SON
-  </div>
-  
-  <div class="brandhis" id="kenda">
-    KEN
-  </div>
-  
-
-  
 </section>
 <!-- ========================= SECTION MAIN END// ========================= -->
 <script>
-
+  
   
   $(".brandhis").hide();
   function getbrand(brand) {
@@ -96,9 +127,9 @@
     $(".brandhis").hide();
     var x = document.getElementById(brand);
     x.style.display = "block";
-
+    
   }
-
+  
 </script>
 <!-- ========================= SECTION  END// ========================= -->
 {% endblock %}
