--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -100,20 +100,22 @@
 			</div> <!-- img-wrap.// -->
 			<figcaption class="info-wrap">
 				<div class="fix-height">
-					<a href="{{  product.brand }}/{{  product.slug  }}" class="title">{{ product.product_name }}</a>
+					<div class="product-name">
+					<a href="{{  product.get_url }}" class="title">{{ product.product_name }}</a>
+					</div>
 					<div class="price-wrap mt-2">
 					
 						{% if product.discount > 0 %}
 						 
-						<span class="price-old">{{ product.price }}</span>
+						<span class="price-old">Rs. {{ product.price }}</span>
 						 
-						<span class="price">{{ product.get_selling }}</span>
+						<span class="price">Rs. {{ product.get_selling }}</span>
 						{% else %}
-						<span class="price">{{ product.price }}</span>
+						<span class="price">Rs. {{ product.price }}</span>
 						{% endif %}
 					</div> <!-- price-wrap.// -->
 				</div>
-				<a href="{% url 'add_cart' product.id %}" class="btn btn-block btn-primary">Add to cart </a>
+				
 			</figcaption>
 		</figure>
 	</div> <!-- col.// -->
