--- a/templates/home.html
+++ b/templates/home.html
@@ -52,33 +52,34 @@
                 <div class="col-sm-5">
                     <form action="{% url 'search_size' %}" method="GET" class="search">
                         
-                        <div class="form-group row">
+                        <div class="row mb-3">
                             
-                            <label class="col-sm-2 " for="width">Width</label>
-                            <div class="col-sm-5"> 
-                                <select class="form-control" onclick="getsizes('width');" id="width"name="width">
+                            <label class="col col-sm-2 col-form-label " for="width">Width</label>
+                            <div class="col col-sm-5"> 
+                                <select class="form-select" onclick="getsizes('width');" id="width"name="width">
                                     <option>Width</option>
                                     {% for width in width %}
                                     <option>{{ width.width }}</option>
                                     {% endfor %}
                                 </select>
                             </div>
+
                         </div>
                         
-                        <div class="form-group row">
-                            <label class="col-sm-2" for="profile">Profile</label>
+                        <div class="row mb-3">
+                            <label class="col-sm-2 col-form-label" for="profile">Profile</label>
                             <div class="col-sm-5"> 
-                                <select class="form-control" onclick="getsizes('profile');" id="profile"name="profile">
+                                <select class="form-select" onclick="getsizes('profile');" id="profile"name="profile">
                                     
                                     <option>Profile</option>
                                     
                                 </select>
                             </div>
                         </div>
-                        <div class="form-group row">
-                            <label class="col-sm-2" for="diameter">Rim Size</label>
+                        <div class="row mb-3">
+                            <label class="col-sm-2 col-form-label" for="diameter">Rim Size</label>
                             <div class="col-sm-5"> 
-                                <select class="form-control"    id="diameter"name="diameter">
+                                <select class="form-select"    id="diameter"name="diameter">
                                     
                                     <option>Rim Size</option>
                                     
@@ -93,10 +94,10 @@
                             </div>
                         </div>
                         
-                        <div class="form-group row">
-                            <label class="col-sm-2" for="terrain">Terrain</label>
+                        <div class="row mb-3">
+                            <label class="col-sm-2 col-form-label" for="terrain">Terrain</label>
                             <div class="col-sm-5"> 
-                                <select class="form-control" id="terrain"name="terrain">
+                                <select class="form-select" id="terrain"name="terrain">
                                     <option>Terrain</option>
                                 </select>
                             </div>
