--- a/templates/includes/modal.html
+++ b/templates/includes/modal.html
@@ -24,8 +24,7 @@
 
             <div class="modal-header">
                 
-               
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> 
             </div>
 
             <div class="modal-body">
