--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -37,7 +37,15 @@
     <h2 class="title">{{ single_product.product_name }}</h2>
     
     <div class="mb-3"> 
-        <var class="price h4">Rs.{{ single_product.price }}</var> 
+       
+        {% if single_product.discount > 0 %}
+						
+        <var class="price-old h4">Rs. {{ single_product.price }}</var>
+        <span class="price h4">Rs. {{ single_product.get_selling }}</var>
+        {% else %}
+        <var class="price h4">Rs. {{ single_product.price }}</var>
+        {% endif %}
+
     </div> 
     
     <p>{{ single_product.description }}</p>
@@ -80,24 +88,24 @@
   
     
     
-    </div> <!-- container .//  -->
-    </section>
-
+ 
 
  
    
   
+    
+    {% if relastedprod %}
   <div class="container">
     <header class="border-bottom mb-4 pb-3">
       <div class="form-inline">
-        <span class="mr-md-auto">Related Items</span>
+        <span class="mr-md-auto">Related Products</span>
         
       </div>
   </header><!-- sect-heading -->
   <div class="row">
-    {% if relastedprod %}
+   
       {% for product in relastedprod %}
-    <div class="col-md-4">
+    <div class="col-md-3">
       <figure class="card card-product-grid">
         <div class="img-wrap"> 
           
@@ -106,9 +114,20 @@
         </div> <!-- img-wrap.// -->
         <figcaption class="info-wrap">
           <div class="fix-height">
-            <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
+            <div class="product-name">
+              <a href="{{  product.get_url }}" class="title">{{ product.product_name }}</a>
+              </div>
+
             <div class="price-wrap mt-2">
-              <span class="price">{{ product.price }}</span> 
+              {% if product.discount > 0 %}
+						
+						<span class="price-old">Rs. {{ product.price }}</span>
+						 
+						<span class="price">Rs. {{ product.get_selling }}</span>
+						{% else %}
+						<span class="price">Rs. {{ product.price }}</span>
+						{% endif %}
+
             </div> <!-- price-wrap.// -->
           </div>
           <a href="{% url 'add_cart' product.id %}" class="btn btn-block btn-primary">Add to cart </a>
@@ -120,6 +139,11 @@
     {% endif %}
   </div> <!-- row end.// -->
 </div>  
+
+
+
+</div> <!-- container .//  -->
+</section>
 
 <script>
 
